Prevent page scrolling by setting overflow hidden
Added CSS rule to set 'overflow: hidden' on html and body elements to prevent scrolling on the page.

--- a/6.2binance-coin-finder/style.css
+++ b/6.2binance-coin-finder/style.css
@@ -1,5 +1,7 @@
 
-
+html, body{
+  overflow: hidden;
+}
 
 body{
   font-family: 'Poppins', Sans-Serif;
